Update README.md
remove adding modules