@@ -4,10 +4,8 @@ switch songs, choose another folder, turn the volume up/down.
 
 ### Setup
 
-download a jar: [jar-file](https://github.com/polinadelaet/MusicPlayer/raw/master/Player2-1.0.jar)
+download a jar: [jar-file]https://github.com/polinadelaet/MusicPlayer/releases/download/v1.0/Player2-1.0.jar)
 
 If you using JAVA 9+ you should write in the cmd:
 
-```java --module-path "path\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.fxml,javafx.media -jar Player2-1.0.jar```
-
-where path is absolute path.
+```java -jar Player2-1.0.jar```
